# forge-sdd-toolkit

./: .eslintrc.json  .gitignore  CHANGELOG.md  CORRECTION-FORGE-TEMPLATES.md  CORRECTION-PROMPT-STRUCTURE.md  HOW-TO-TEST.md  INSTALL.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  SETUP.md  SOLVED-TESTING.md  TEST-INSTALLATION.sh  TESTING.md  install.sh  package.json  package.json.legacy  pyproject.toml  tsconfig.json
.github/: LIFECYCLE_STAGES.md  SDD_METHODOLOGY.md  copilot-instructions.md
docs/adr/: ADR-004-always-use-forge-templates.md
docs/best-practices/: forge-custom-ui-architecture.md
scripts/: init-test-project.sh
src/forge_sdd_toolkit/: __init__.py  cli.py
structure/docs/: CONTRIBUTING.md
structure/docs/ADR/: ADR-001-three-level-architecture.md  ADR-002-sdd-methodology-adoption.md  ADR-003-user-driven-decisions.md  README.md
structure/prompts/base/: decision-framework.md  system-prompt.md
structure/prompts/commands/: forge-architect.md  forge-architect.prompt.md  forge-ideate.md  forge-implement.md  forge-implement.prompt.md  forge-operate.prompt.md  forge-plan.md  forge-test.prompt.md
structure/schemas/: ADD.schema.json  README.md  implementation-plan.schema.json  manifest-patch.schema.json  prompt.schema.json  specification.schema.json  test-plan.schema.json
structure/scripts/cli/: README.md  forge-sdd.ts
structure/scripts/utils/: file-utils.ts  path-mappings.ts
structure/specializations/jira/issue-panel/: github-pr-status.md
structure/steps-templates/: specification-template.md
structure/templates/configs/: gitignore-template.md  tsconfig-frontend-template.md  vite-config-template.md
structure/templates/general/documents/: ADD-template.md  implementation-plan-template.md  specification-template.md  test-plan-template.md
tests/: path-mappings.test.ts
