[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forge-sdd-toolkit"
version = "0.2.0"
description = "Specification-Driven Development toolkit for Atlassian Forge apps"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Vinicius Almeida", email = "vsalmeid@example.com" }
]
keywords = [
    "atlassian",
    "forge",
    "specification-driven-development",
    "sdd",
    "context-engineering",
    "jira",
    "confluence",
    "github-copilot"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
requires-python = ">=3.7"
dependencies = []

[project.urls]
Homepage = "https://github.com/4youtest-vsalmeida/forge-sdd-toolkit"
Repository = "https://github.com/4youtest-vsalmeida/forge-sdd-toolkit"
Documentation = "https://github.com/4youtest-vsalmeida/forge-sdd-toolkit#readme"
Issues = "https://github.com/4youtest-vsalmeida/forge-sdd-toolkit/issues"

[project.scripts]
forge-sdd = "forge_sdd_toolkit.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/forge_sdd_toolkit"]

[tool.hatch.build.targets.wheel.force-include]
"structure" = "forge_sdd_toolkit/structure"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/structure",
    "/README.md",
    "/LICENSE",
]
